# newsgui

./: start_web.sh
headlines/: Cargo.toml
headlines/src/: headlines.rs  lib.rs  main.rs
newsapi/: Cargo.toml
newsapi/src/: lib.rs
webapp/: index.html
